test/functions/iterators/errors/mistakenIteratorShape.future
bug: Internal error from mistaken indexing
#15719
